--- a/game/Decide/Decide/Decide.vcxproj
+++ b/game/Decide/Decide/Decide.vcxproj
@@ -214,6 +214,7 @@
     <ClInclude Include="GameObject\Inventory\Inventory.h" />
     <ClInclude Include="GameObject\ItemManager\HoldItem\ConsumptionItem.h" />
     <ClInclude Include="GameObject\ItemManager\HoldItem\HoldArmor.h" />
+    <ClInclude Include="GameObject\ItemManager\HoldItem\HoldEquipment.h" />
     <ClInclude Include="GameObject\ItemManager\HoldItem\HoldItemBase.h" />
     <ClInclude Include="GameObject\ItemManager\HoldItem\HoldWeapon.h" />
     <ClInclude Include="GameObject\ItemManager\ItemManager.h" />
@@ -242,7 +243,6 @@
     <ClInclude Include="GameObject\Village\Shop\Shop.h" />
     <ClInclude Include="GameObject\Village\TextBox.h" />
     <ClInclude Include="GameSystem.h" />
-    <ClInclude Include="HoldEquipment.h" />
     <ClInclude Include="Ocean.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Scene\GameScene.h" />
@@ -305,6 +305,7 @@
     <ClCompile Include="GameObject\Inventory\Inventory.cpp" />
     <ClCompile Include="GameObject\ItemManager\HoldItem\ConsumptionItem.cpp" />
     <ClCompile Include="GameObject\ItemManager\HoldItem\HoldArmor.cpp" />
+    <ClCompile Include="GameObject\ItemManager\HoldItem\HoldEquipment.cpp" />
     <ClCompile Include="GameObject\ItemManager\HoldItem\HoldItemBase.cpp" />
     <ClCompile Include="GameObject\ItemManager\HoldItem\HoldWeapon.cpp" />
     <ClCompile Include="GameObject\ItemManager\ItemManager.cpp" />
@@ -330,7 +331,6 @@
     <ClCompile Include="GameObject\Village\Shop\HFSM\ShopS_Select.cpp" />
     <ClCompile Include="GameObject\Village\Shop\Shop.cpp" />
     <ClCompile Include="GameObject\Village\TextBox.cpp" />
-    <ClCompile Include="HoldEquipment.cpp" />
     <ClCompile Include="Ocean.cpp" />
     <ClCompile Include="Scene\GameScene.cpp" />
     <ClCompile Include="Scene\TitleScene.cpp" />
