--- a/game/Decide/Decide/Decide.vcxproj.filters
+++ b/game/Decide/Decide/Decide.vcxproj.filters
@@ -251,6 +251,10 @@
     </ClCompile>
     <ClCompile Include="GameObject\StatusWindow\HoldItem2D.cpp" />
     <ClCompile Include="BuffDebuffICon.cpp" />
+    <ClCompile Include="GameObject\Player\PlayerState\PlayerStateSpeak.cpp" />
+    <ClCompile Include="GameObject\ItemManager\HoldItem\HoldItemFactory.cpp">
+      <Filter>GameObject\ItemManager\HoldItem</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AttackCollision.h" />
@@ -515,6 +519,10 @@
     </ClInclude>
     <ClInclude Include="GameObject\StatusWindow\HoldItem2D.h" />
     <ClInclude Include="BuffDebuffICon.h" />
+    <ClInclude Include="GameObject\Player\PlayerState\PlayerStateSpeak.h" />
+    <ClInclude Include="GameObject\ItemManager\HoldItem\HoldItemFactory.h">
+      <Filter>GameObject\ItemManager\HoldItem</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Decide.rc" />
