--- a/game/Decide/Decide/Decide.vcxproj.filters
+++ b/game/Decide/Decide/Decide.vcxproj.filters
@@ -1,13 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <FxCompile Include="Asset\Shader\Ocean.fx" />
-  </ItemGroup>
-  <ItemGroup>
     <ClCompile Include="AttackCollision.cpp" />
     <ClCompile Include="Decide.cpp" />
     <ClCompile Include="GameLight.cpp" />
-    <ClCompile Include="Ocean.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="Scene\GameScene.cpp">
       <Filter>Scene</Filter>
@@ -249,13 +245,16 @@
     <ClCompile Include="GameObject\Component\ParticleEffect.cpp">
       <Filter>GameObject\Component</Filter>
     </ClCompile>
+    <ClCompile Include="GameObject\StatusWindow\HoldItem2D.cpp" />
+    <ClCompile Include="GameObject\Nature\Ocean\Ocean.cpp">
+      <Filter>GameObject\Nature\Ocean</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AttackCollision.h" />
     <ClInclude Include="Decide.h" />
     <ClInclude Include="GameLight.h" />
     <ClInclude Include="GameSystem.h" />
-    <ClInclude Include="Ocean.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Scene\GameScene.h">
@@ -511,6 +510,10 @@
     <ClInclude Include="GameObject\Component\ParticleEffect.h">
       <Filter>GameObject\Component</Filter>
     </ClInclude>
+    <ClInclude Include="GameObject\StatusWindow\HoldItem2D.h" />
+    <ClInclude Include="GameObject\Nature\Ocean\Ocean.h">
+      <Filter>GameObject\Nature\Ocean</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Decide.rc" />
@@ -592,5 +595,16 @@
     <Filter Include="GameObject\History\Effect">
       <UniqueIdentifier>{594e76b4-ad44-4582-bc81-c2cf8b53d462}</UniqueIdentifier>
     </Filter>
+    <Filter Include="GameObject\Nature">
+      <UniqueIdentifier>{eeaed660-a034-4ff8-ba98-befbf4be6f6c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="GameObject\Nature\Ocean">
+      <UniqueIdentifier>{a1e103a6-04b8-4c1b-bf29-70b05cb9fc75}</UniqueIdentifier>
+    </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="Asset\Shader\Ocean.fx">
+      <Filter>GameObject\Nature\Ocean</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
