--- a/game/Decide/Decide/Decide.vcxproj
+++ b/game/Decide/Decide/Decide.vcxproj
@@ -234,6 +234,7 @@
     <ClInclude Include="GameObject\SpaceCollisionObject.h" />
     <ClInclude Include="GameObject\SplitSpace.h" />
     <ClInclude Include="GameObject\StatusWindow\Cursor.h" />
+    <ClInclude Include="GameObject\StatusWindow\Dialog.h" />
     <ClInclude Include="GameObject\StatusWindow\HoldItem2D.h" />
     <ClInclude Include="GameObject\StatusWindow\Item2D.h" />
     <ClInclude Include="GameObject\StatusWindow\ItemWindow.h" />
@@ -331,6 +332,7 @@
     <ClCompile Include="GameObject\SpaceCollisionObject.cpp" />
     <ClCompile Include="GameObject\SplitSpace.cpp" />
     <ClCompile Include="GameObject\StatusWindow\Cursor.cpp" />
+    <ClCompile Include="GameObject\StatusWindow\Dialog.cpp" />
     <ClCompile Include="GameObject\StatusWindow\HoldItem2D.cpp" />
     <ClCompile Include="GameObject\StatusWindow\Item2D.cpp" />
     <ClCompile Include="GameObject\StatusWindow\ItemWindow.cpp" />
