シーンが切り替わった時にインベントリでクラッシュするバグを修正

--- a/game/Decide/Decide/Decide.vcxproj.filters
+++ b/game/Decide/Decide/Decide.vcxproj.filters
@@ -249,7 +249,6 @@
       <Filter>GameObject\Component</Filter>
     </ClCompile>
     <ClCompile Include="GameObject\StatusWindow\HoldItem2D.cpp" />
-    <ClCompile Include="BuffDebuffICon.cpp" />
     <ClCompile Include="GameObject\Player\PlayerState\PlayerStateSpeak.cpp" />
     <ClCompile Include="GameObject\ItemManager\HoldItem\HoldItemFactory.cpp">
       <Filter>GameObject\ItemManager\HoldItem</Filter>
@@ -261,6 +260,9 @@
     </ClCompile>
     <ClCompile Include="GameObject\StatusWindow\Dialog.cpp">
       <Filter>GameObject\StatusWindow</Filter>
+    </ClCompile>
+    <ClCompile Include="GameObject\Component\BuffDebuffICon.cpp">
+      <Filter>GameObject\Component</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -524,7 +526,6 @@
       <Filter>GameObject\Component</Filter>
     </ClInclude>
     <ClInclude Include="GameObject\StatusWindow\HoldItem2D.h" />
-    <ClInclude Include="BuffDebuffICon.h" />
     <ClInclude Include="GameObject\Player\PlayerState\PlayerStateSpeak.h" />
     <ClInclude Include="GameObject\ItemManager\HoldItem\HoldItemFactory.h">
       <Filter>GameObject\ItemManager\HoldItem</Filter>
@@ -536,6 +537,9 @@
     </ClInclude>
     <ClInclude Include="GameObject\StatusWindow\Dialog.h">
       <Filter>GameObject\StatusWindow</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject\Component\BuffDebuffICon.h">
+      <Filter>GameObject\Component</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
