--- a/game/Decide/Decide/Decide.vcxproj
+++ b/game/Decide/Decide/Decide.vcxproj
@@ -192,6 +192,7 @@
     <ClInclude Include="GameObject\Enemy\LaserBreath.h" />
     <ClInclude Include="GameObject\Enemy\SearchViewAngle.h" />
     <ClInclude Include="GameObject\GameManager.h" />
+    <ClInclude Include="GameObject\Ground\Dungeon.h" />
     <ClInclude Include="GameObject\Ground\Ground.h" />
     <ClInclude Include="GameObject\History\Chip.h" />
     <ClInclude Include="GameObject\History\Effect\MysteryLight.h" />
@@ -294,6 +295,7 @@
     <ClCompile Include="GameObject\Enemy\LaserBreath.cpp" />
     <ClCompile Include="GameObject\Enemy\SearchViewAngle.cpp" />
     <ClCompile Include="GameObject\GameManager.cpp" />
+    <ClCompile Include="GameObject\Ground\Dungeon.cpp" />
     <ClCompile Include="GameObject\Ground\Ground.cpp" />
     <ClCompile Include="GameObject\History\Chip.cpp" />
     <ClCompile Include="GameObject\History\Effect\MysteryLight.cpp" />
