--- a/game/Decide/Decide/Decide.vcxproj
+++ b/game/Decide/Decide/Decide.vcxproj
@@ -179,17 +179,24 @@
     <ClInclude Include="GameObject\Enemy\EnemyDrarian.h" />
     <ClInclude Include="GameObject\Enemy\EnemyManager.h" />
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyAttackState.h" />
+    <ClInclude Include="GameObject\Enemy\HFSM\EnemyChaceState.h" />
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyDamageReactionState.h" />
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyDeathState.h" />
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyDiscoveryState.h" />
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyFallState.h" />
+    <ClInclude Include="GameObject\Enemy\HFSM\EnemySpeakState.h" />
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyStartAttackState.h" />
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyState.h" />
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyThreatState.h" />
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyTranslationState.h" />
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyWaitState.h" />
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyWanderingState.h" />
+    <ClInclude Include="GameObject\Enemy\HFSM\LastBossDownState.h" />
+    <ClInclude Include="GameObject\Enemy\HFSM\LastBossHistoryTamperingState.h" />
+    <ClInclude Include="GameObject\Enemy\HFSM\LastBossMagicianState.h" />
+    <ClInclude Include="GameObject\Enemy\HFSM\LastBossThroneState.h" />
     <ClInclude Include="GameObject\Enemy\LaserBreath.h" />
+    <ClInclude Include="GameObject\Enemy\LastBoss.h" />
     <ClInclude Include="GameObject\Enemy\SearchViewAngle.h" />
     <ClInclude Include="GameObject\GameManager.h" />
     <ClInclude Include="GameObject\Ground\Ground.h" />
@@ -281,17 +288,24 @@
     <ClCompile Include="GameObject\Enemy\EnemyDrarian.cpp" />
     <ClCompile Include="GameObject\Enemy\EnemyManager.cpp" />
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyAttackState.cpp" />
+    <ClCompile Include="GameObject\Enemy\HFSM\EnemyChaceState.cpp" />
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyDamageReactionState.cpp" />
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyDeathState.cpp" />
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyDiscoveryState.cpp" />
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyFallState.cpp" />
+    <ClCompile Include="GameObject\Enemy\HFSM\EnemySpeakState.cpp" />
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyStartAttackState.cpp" />
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyState.cpp" />
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyThreatState.cpp" />
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyTranslationState.cpp" />
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyWaitState.cpp" />
     <ClCompile Include="GameObject\Enemy\HFSM\EnemyWanderingState.cpp" />
+    <ClCompile Include="GameObject\Enemy\HFSM\LastBossDownState.cpp" />
+    <ClCompile Include="GameObject\Enemy\HFSM\LastBossHistoryTamperingState.cpp" />
+    <ClCompile Include="GameObject\Enemy\HFSM\LastBossMagicianState.cpp" />
+    <ClCompile Include="GameObject\Enemy\HFSM\LastBossThroneState.cpp" />
     <ClCompile Include="GameObject\Enemy\LaserBreath.cpp" />
+    <ClCompile Include="GameObject\Enemy\LastBoss.cpp" />
     <ClCompile Include="GameObject\Enemy\SearchViewAngle.cpp" />
     <ClCompile Include="GameObject\GameManager.cpp" />
     <ClCompile Include="GameObject\Ground\Ground.cpp" />
