--- a/game/Decide/Decide/Decide.vcxproj
+++ b/game/Decide/Decide/Decide.vcxproj
@@ -213,6 +213,7 @@
     <ClInclude Include="GameObject\History\HistoryMenu\Chip2D.h" />
     <ClInclude Include="GameObject\History\HistoryMenu\HistoryMenu.h" />
     <ClInclude Include="GameObject\Inventory\Inventory.h" />
+    <ClInclude Include="GameObject\ItemManager\DropItem\DropItem.h" />
     <ClInclude Include="GameObject\ItemManager\HoldItem\ConsumptionItem.h" />
     <ClInclude Include="GameObject\ItemManager\HoldItem\HoldArmor.h" />
     <ClInclude Include="GameObject\ItemManager\HoldItem\HoldEquipment.h" />
@@ -315,6 +316,7 @@
     <ClCompile Include="GameObject\History\HistoryMenu\Chip2D.cpp" />
     <ClCompile Include="GameObject\History\HistoryMenu\HistoryMenu.cpp" />
     <ClCompile Include="GameObject\Inventory\Inventory.cpp" />
+    <ClCompile Include="GameObject\ItemManager\DropItem\DropItem.cpp" />
     <ClCompile Include="GameObject\ItemManager\HoldItem\ConsumptionItem.cpp" />
     <ClCompile Include="GameObject\ItemManager\HoldItem\HoldArmor.cpp" />
     <ClCompile Include="GameObject\ItemManager\HoldItem\HoldEquipment.cpp" />
